# vso-agent

./: .gitattributes  .gitignore  Jakefile.js  README.md  artifactory-deploy.sh  configure.sh  getagent.sh  gulpfile.js  package.json  run.sh  sources
admin/: createpackages.sh  dev.sh  package.sh  publish.sh  tagrelease.sh
docs/: contribute.md  old.md  onprem.md  releases.md  sampleoutput.md  service.md  teeeula.md  troubleshooting.md  vsts.md  workfolder.md
src/agent/: codecoverageconstants.ts  codecoverageenabler.ts  codecoveragepublisher.ts  codecoveragesummaryreader.ts  common.ts  concurrentqueue.ts  configuration.ts  configure.ts  context.ts  diagnostics.ts  environment.ts  extensions.ts  feedback.ts  filecontainerhelper.ts  heartbeat.ts  host.ts  inputs.ts  interfaces.ts  job.ts  logging.ts  messagelistener.ts  plugins.ts  service.ts  steprunner.ts  svc.sh  taskmanager.ts  testresultreader.ts  testrunpublisher.ts  tracing.ts  utilities.ts  vsoagent.ts  vsoworker.ts
src/agent/api/: agentapi.ts  basiccreds.ts  buildapi.ts  filecontainerapi.ts  httpclient.ts  interfaces.ts  messagelistener.ts  qagentapi.ts  restclient.ts  taskapi.ts  testmanagementapi.ts  timelineapi.ts  webapi.ts
src/agent/commands/: artifact.associate.ts  (+13 more)
src/test/: builds.ts  enablecodecoveragetests.ts  jake.ts  logging.ts  publishcodecoveragetests.ts  publishertests.ts  releasePlugin.ts  sample.ts  shellscript.ts  tasklib.ts  testprojects.ts  util.ts  utilitytests.ts  xcode.ts
src/test/projects/cmake/: CMakeLists.txt  readme.txt  sqrt.cxx  sqrt.h.in
src/vso-task-lib/: package.json
(+161 files in other folders)
